--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -102,7 +102,7 @@ li {
 					height: 24.4px;
 					padding: 0;
 					margin: 0;
-					flex: 1 1 auto;
+					//flex: 1 1 auto;
 					fill: rgb(29, 155, 240);
 				}
 			}
@@ -534,7 +534,7 @@ li {
 			flex: 1 0 auto;
 			height: 100vh;
 			// z-index: 2;
-			width: 68px;
+			width: 69px;
       border-top:0;
 			border-right: var(--borders-color);
 			margin: 0;
@@ -543,18 +543,20 @@ li {
       overflow-y: scroll;
 
 			nav {
+        display: flex;
 				flex-direction: column;
 				//flex-basis: 0 0 auto;
-				width: 68px;
+        align-items: center;
+				width: 100%;
 				height: 587.25px;
 				//border: 0.1px solid blue;
-				//margin: 2px 0 4px 0;
-				padding: 0 4px 0 4px;
+				margin: 0 ;
+				padding:0;
 				ul {
 					width: 60px;
           height: 524.25px;
 					flex-direction: column;
-
+          align-items: center;
 					//border: solid yellow;
 					margin: 6px 0 0 0;
 					padding: 0;
@@ -571,18 +573,19 @@ li {
 					}
 				}
 				.twitter-logo-box {
-					width: 60px;
-					height: 52px;
+					width: 100%;
+					height: 56px;
 					display: flex;
 					// border: solid purple;
+          justify-content: center;
 					align-items: center;
 					// margin: 5px 0 0 0;
-					 padding: 2px 0 2px 0;
+					 //padding: 2px 0 2px 1px;
 					.twitter-logo {
             max-width:50px;
 						height: 30px;
 						padding: 0;
-						margin: 0;
+						margin: 0 0 0 0;
 						//flex: 1 1 auto;
 						fill: rgb(29, 155, 240);
             path{
