--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -127,7 +127,7 @@ li {
 		align-items: center;
 		margin: 0;
 		padding: 0;
-		border: solid green;
+		//border: solid green;
 
 		@media only screen and (500px<=width<=688px) {
 			width: 100%;
@@ -150,6 +150,7 @@ li {
 		fill: rgb(29, 155, 240);
 
 		@media only screen and (500px<=width<=688px) {
+			display: flex;
 			max-width: 50px;
 			height: 30px;
 			padding: 0;
@@ -334,17 +335,21 @@ button:hover {
 		align-items: center;
 		margin: 0;
 		padding: 0;
+
+		@media only screen and (500px<=width<=688px) {
+			visibility: hidden;
+		}
 	}
 
 	&_twitter-logo {
 		height: 24.4px;
+		display: flex;
 		padding: 0;
 		margin: 0;
 		flex: 1 1 auto;
 		fill: rgb(29, 155, 240);
 
 		@media only screen and (500px<=width<=688px) {
-			display: none;
 		}
 	}
 
@@ -408,43 +413,20 @@ button:hover {
 						} */
 }
 
-#tweet-area {
-	display: none;
-	/* justify-content: space-between;
-			img {
-				width: 3rem;
-				height: 3rem;
-				border-radius: 50%;
-				align-self: center;
-				margin-left: 1rem;
-				margin-top: -0.9rem;
-			} */
-	/* #tweet-input {
-				width: 87%;
-				height: 5rem;
-				border: none;
-			}
-			::placeholder {
-				font-size: 1.23rem;
-
-				color: black;
-				opacity: 0.7;
-			}
-			#tweet-input:focus {
-				outline: 0;
-			} */
-}
-
 .timeline-wrapper {
 	width: 100%;
+	padding: 0;;
 	margin-top: var(--header-height);
 	//overflow-y: scroll;
 }
 
 .tweet-area {
+	width: 100%;
+	margin:0;
 	&_profile-image-box {
 		width: 60px;
 		padding-right: 12px;
+	}
 		img {
 			width: 48px;
 		}
@@ -455,14 +437,14 @@ button:hover {
 		}
 
 		&_tweet-input {
-			width: 378px;
+			width: 100%;
 			height: 124px;
 			display: flex;
 			border: 1px solid green;
 			width: 100%;
 		}
 	}
-}
+
 #icons-row {
 	display: none;
 }
