--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -49,7 +49,7 @@ li {
 	}
 }
 
-.hidden705{
+.hidden705 {
 	display: none !important;
 	@media only screen and (705px<=width) {
 		display: flex !important;
@@ -245,19 +245,6 @@ svg:active {
 				}
  */
 
-button {
-	display: none;
-	align-self: start;
-	font-weight: bold;
-	font-size: 1.1rem;
-	border-radius: 3rem;
-	width: 14rem;
-	height: 3.3rem;
-	color: white;
-	background-color: #1d9bf0;
-	border: none;
-	margin-top: 1.5rem;
-}
 button:hover {
 	background-color: #1d8ad3;
 }
@@ -450,13 +437,14 @@ button:hover {
 	width: 100%;
 	height: 108px;
 	margin: 0;
-	padding: 4px 0;
+	padding: 4px 14px 0 16px;
 	//border:1px solid red;
+	box-sizing: border-box;
 	border-bottom: var(--main-border-style);
 
 	&_wrapper {
 		@extend .wrappers--flex;
-		padding: 0 16px;
+		//padding: 0 16px;
 		//border:1px solid purple;
 		box-sizing: border-box;
 	}
@@ -464,12 +452,9 @@ button:hover {
 	&_profile-image-box {
 		width: 60px;
 		height: 100%;
-		padding-right: 12px;
+		padding-right: 11px;
+		margin: 0 0 0 0;
 	}
-
-	/*  img {
-			width: 48px;
-		} */
 
 	&_profile-img {
 		width: 48px;
@@ -482,32 +467,76 @@ button:hover {
 		width: 100%;
 		height: 100%;
 		display: flex;
-		border: 1px solid green;
 		width: 100%;
 		padding: 4px 0;
 		box-sizing: border-box;
 	}
 
 	&_icons-row {
+		display: flex;
 		height: 100%;
-		box-sizing: border-box;
-		//border:1px solid blue;
+		margin: 0 0 0 62px;
+		padding: 0;
+		justify-content: space-between;
 		box-sizing: border-box;
 	}
 
 	&_ul {
 		display: flex;
+		flex: 0 1 33%;
 		height: 100%;
-		width: 100%;
+		//width: 100%;
 		margin: 0;
 		padding: 0;
-		border: 1px solid orange;
+		//border: 1px solid orange;
 		box-sizing: border-box;
+		list-style: none;
 	}
 
-	&_tweet-icons{
-		height:5px;
-		width: 5px;;
+	&_li {
+		display: flex;
+		height: 100%;
+		width: 25%;
+		justify-content: center;
+		align-items: center;
+		//border: 1px solid purple;
+		box-sizing: border-box;
+		margin: 0;
+		padding: 0;
+	}
+
+	&_tweet-icons {
+		height: 65%;
+		width: 65%;
+		margin: 0;
+		padding: 0;
+		fill: rgb(29, 155, 240);
+		stroke-width: 1px;
+	}
+
+	&_wrapper--btn {
+		@extend .wrappers--flex;
+		flex: 0 1 33%;
+		width: 89.83px;
+		justify-content: end;
+		align-items: center;
+		//border: 2px solid green;
+	}
+	&_btn {
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		font-weight: bold;
+		font-size: 15px;
+		border-radius: 3rem;
+		width: 77.83px;
+		height: 36px;
+		color: white;
+		background-color: rgba(29, 155, 240, 0.5);
+		margin: 0;
+		padding: 0;
+		border: none;
+		//margin-top: 1.5rem;
 	}
 }
 
