--- a/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
+++ b/Main_Folder/MY_PROJECTS/twitter_clone/src/App.scss
@@ -19,10 +19,9 @@
 	--main-border-style: 1px solid rgb(239, 243, 244);
 }
 
-::placeholder{
+::placeholder {
 	opacity: 0.72;
 	color: black;
-
 }
 
 section,
@@ -48,7 +47,7 @@ li {
 	height: 26.25px;
 }
 
-.lightIcons{
+.lightIcons {
 	opacity: 0.5;
 }
 
@@ -324,7 +323,7 @@ button:hover {
 		padding: 0;
 
 		@media only screen and (500px<=width<=688px) {
-			padding-left: 18px;
+			padding-left: 16px;
 			padding-top: 15px;
 		}
 	}
@@ -333,8 +332,10 @@ button:hover {
 
 		@media only screen and (500px<=width<=688px) {
 			display: inline-block;
+			font-family: chirpBold;
 			font-size: 20px;
 			font-weight: bold;
+			//transform: scale(1.0363,1);
 			//border: solid;
 		}
 	}
@@ -425,7 +426,15 @@ button:hover {
 		color: rgb(83, 100, 113);
 		box-sizing: border-box;
 		span {
-			font-weight: bold;
+			font-family: chirpMedium;
+		};
+
+		&--clicked {
+			@extend .header_anchor;
+			span {
+				font-family: chirpBold;
+				color: black;
+			}
 		}
 	}
 	a:active {
@@ -480,11 +489,11 @@ button:hover {
 		width: 100%;
 		height: 124px;
 		display: flex;
-		padding: 18px 0 0 0 ;
+		padding: 18px 0 0 0;
 		box-sizing: border-box;
 		border: none;
 		font-size: 20px;
-		font-family:chirp;
+		font-family: chirp;
 	}
 
 	&_icons-row {
@@ -534,15 +543,13 @@ button:hover {
 	}
 
 	&_tweet-icons {
-		width:20px;
+		width: 20px;
 		aspect-ratio: 1/1;
 		margin: 0;
 		padding: 0;
 		fill: rgb(29, 155, 240);
 		//stroke-width: 1px;
 	}
-
-
 
 	&_wrapper--btn {
 		@extend .wrappers--flex;
@@ -569,7 +576,7 @@ button:hover {
 		//margin-top: 1.5rem;
 	}
 
-	&_btn-text{
+	&_btn-text {
 		display: inline-block;
 	}
 }
